--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.4.0"
+    "recordrtc": "^5.6.2",
+    "tailwind-merge": "^2.4.0",
+    "webrtc-adapter": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
