--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.24",
+    "mic-recorder-to-mp3": "^2.2.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-media-recorder": "^1.7.0",
     "recordrtc": "^5.6.2",
     "tailwind-merge": "^2.4.0",
     "webrtc-adapter": "^9.0.1"
@@ -22,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/recordrtc": "^5.6.14",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
